--- a/EnglishApplication.Api/appsettings.json
+++ b/EnglishApplication.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "EnglishService",
+    "Audience": "EnglishClient",
+    "TokenExpiresInHours": 72,
+    "RefreshTokenExpiresInHours": 720,
+    "Key": "a912e4166ac7b930d44282ac7b9305efe0347b3c7aea883d55"
+  }
 }
