--- a/EnglishApplication.Api/EnglishApplication.Api.csproj
+++ b/EnglishApplication.Api/EnglishApplication.Api.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
           <PrivateAssets>all</PrivateAssets>
@@ -24,6 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EnglishApplication.Application\EnglishApplication.Application.csproj" />
+      <ProjectReference Include="..\EnglishApplication.Common\EnglishApplication.Common.csproj" />
       <ProjectReference Include="..\EnglishApplication.Infrastructure\EnglishApplication.Infrastructure.csproj" />
     </ItemGroup>
 
