--- a/EnglishApplication.Common/EnglishApplication.Common.csproj
+++ b/EnglishApplication.Common/EnglishApplication.Common.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
     </ItemGroup>
