--- a/EnglishApplication.Infrastructure/EnglishApplication.Infrastructure.csproj
+++ b/EnglishApplication.Infrastructure/EnglishApplication.Infrastructure.csproj
@@ -24,4 +24,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Persistence\Migrations\" />
+    </ItemGroup>
+
 </Project>
