--- a/EnglishApplication.Api/appsettings.Development.json
+++ b/EnglishApplication.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;User Id=english;Password=password;Database=english;Port=5430;"
+    "Default": "Host=localhost;User Id=admin;Password=password;Database=english;Port=50000;"
   }
 }
