--- a/EnglishApplication.Api/appsettings.Development.json
+++ b/EnglishApplication.Api/appsettings.Development.json
@@ -6,6 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;User Id=admin;Password=password;Database=english;Port=50000;"
+    "Default": "Host=localhost;User Id=english;Password=password;Database=english;Port=50000;"
+  },
+  "RabbitMq": {
+    "Host": "rabbitmq",
+    "User": "user",
+    "Pass": "password"
   }
 }
