--- a/EnglishApplication.Api/appsettings.Production.json
+++ b/EnglishApplication.Api/appsettings.Production.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "Default": "Host=database;User Id=english;Password=password;Database=english;Port=5432;"
+  },
+  "RabbitMq": {
+    "Host": "rabbitmq",
+    "User": "user",
+    "Pass": "password"
   }
 }
