--- a/EnglishApplication.Models/EnglishApplication.Models.csproj
+++ b/EnglishApplication.Models/EnglishApplication.Models.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EnglishApplication.Application\EnglishApplication.Application.csproj" />
+    </ItemGroup>
+
 </Project>
