--- a/EnglishApplication.Api/EnglishApplication.Api.csproj
+++ b/EnglishApplication.Api/EnglishApplication.Api.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <RootNamespace>EnglishApplication</RootNamespace>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
