--- a/EnglishApplication.Api/appsettings.Development.json
+++ b/EnglishApplication.Api/appsettings.Development.json
@@ -9,8 +9,9 @@
     "Default": "Host=localhost;User Id=english;Password=password;Database=english;Port=50000;"
   },
   "RabbitMq": {
-    "Host": "rabbitmq",
-    "User": "user",
-    "Pass": "password"
+    "Host": "localhost",
+    "User": "english",
+    "Password": "password",
+    "Port": 5672
   }
 }
