--- a/EnglishApplication.Api/appsettings.Production.json
+++ b/EnglishApplication.Api/appsettings.Production.json
@@ -10,7 +10,8 @@
   },
   "RabbitMq": {
     "Host": "rabbitmq",
-    "User": "user",
-    "Pass": "password"
+    "User": "english",
+    "Password": "password",
+    "Port": 5672
   }
 }
