--- a/EnglishApplication.Api/appsettings.Production.json
+++ b/EnglishApplication.Api/appsettings.Production.json
@@ -12,6 +12,7 @@
     "Host": "rabbitmq",
     "User": "english",
     "Password": "password",
-    "Port": 5672
+    "Port": 5672,
+    "SessionNextRoundQueue": "session.next-round"
   }
 }
