--- a/EnglishApplication.Application/EnglishApplication.Application.csproj
+++ b/EnglishApplication.Application/EnglishApplication.Application.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\EnglishApplication.Infrastructure\EnglishApplication.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
+    </ItemGroup>
+
 </Project>
